Bug 693300 - Portion of output missing with tiffsep device
Summary: Portion of output missing with tiffsep device
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Other Driver (show other bugs)
Version: master
Hardware: PC All
: P2 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-25 17:17 UTC by Marcos H. Woehrmann
Modified: 2012-09-14 15:24 UTC (History)
0 users

See Also:
Customer: 393
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2012-08-25 17:17:26 UTC
The composite file generated by Ghostscript using the tiffsep device is missing a portion of the output, as compared to Adobe Acrobat 10.1.4 and the customer's expectation.

The command line I'm using for testing:

  bin/gs -sDEVICE=tiffsep -o test.tif ./22394_PROOF\[1].pdf
Comment 3 Michael Vrhel 2012-08-29 18:29:42 UTC
I dont see any issue with this one.  Can you show me a screen shot?
Comment 4 Michael Vrhel 2012-08-29 20:30:21 UTC
ok.  I see the issue.  This should be easy to track down.
Comment 5 Michael Vrhel 2012-09-04 14:14:45 UTC
I have tracked this down to a issue with the transparency device making the overprint device not work correctly.  Digging into this further